tests/fixtures/multi_module/invalid/missing_target/other.furqan
bismillah Other {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: noop
    not_scope: nothing_excluded
}

fn placeholder() -> Integrity {
    return Integrity
}
